[workspace]
resolver = "2"
members = [ "client", "common","server"]

[package]
name = "netcode"
version = "0.1.0"
edition = "2021"

[dependencies]
client = {path = "client"}
server = {path = "server"}

[dev-dependencies]
tokio = {workspace = true}

[workspace.dependencies]
hyper = {version = "1.1", features = ["server", "http1"]}
hyper-util = {version = "0.1.3", features = ["tokio"]}
http-body-util = "0.1.0"
hyper-tungstenite = "0.13"
futures = "0.3.30"
tokio = {version = "1.36", features = ["full"]}
tokio-test = "0.4.4"
tokio-util = "0.7.10"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"
ewebsock = {version = "0.5.0", features = ["tls"]}
