[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
ewebsock = {workspace = true}
common = {path = "../common"}
tokio-util = {workspace = true}
bincode = { workspace = true }
serde = { workspace = true }
[dev-dependencies]
tokio-test = {workspace = true}