[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path="../common"}
tokio = {workspace = true}
hyper = {workspace = true}
hyper-tungstenite = {workspace = true}
hyper-util = {workspace = true}
tokio-util = {workspace = true}
http-body-util = {workspace = true}
futures = {workspace = true}

[dev-dependencies]
tokio-test = {workspace = true}